--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   intl: ^0.16.1
   cloud_firestore: ^0.13.6
   firebase_auth: ^0.16.1
+  flutter_staggered_grid_view: ^0.3.2
   # firebase_core: ^0.4.5
 
 dev_dependencies:
