--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cloud_firestore: ^0.13.6
   firebase_auth: ^0.16.1
   flutter_staggered_grid_view: ^0.3.2
+  http: ^0.12.2
   # firebase_core: ^0.4.5
 
 dev_dependencies:
