--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_auth: ^0.16.1
   flutter_staggered_grid_view: ^0.3.2
   http: ^0.12.2
+  email_validator: ^1.0.5
   # firebase_core: ^0.4.5
 
 dev_dependencies:
