--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,8 +64,8 @@ jobs:
           flutter-version: '1.22.00'
           channel: 'dev'
       # Run flutter integrate tests
-      # - name: Run Flutter Driver tests
-      #   run: flutter drive --target=test_driver/app.dart
+      - name: Run Flutter Driver tests
+        run: flutter drive --target=test_driver/app.dart
 
 
   drive_android:
